--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@ body {
   background-position: left center;
   background-size: 115% 115%;
   transition: 5000ms;
+  /* overflow: hidden; */
 }
 
 .container {
@@ -31,6 +32,7 @@ body {
   word-break: break-all;
   flex-grow: 1;
   overflow: auto;
+  /* min-height: 0; */
 }
 
 
@@ -133,7 +135,6 @@ span {
   background-color: rgba(13, 19, 11, 0.754);
   transition: 1500ms;
 }
-
 .audio {
   display: none;
   z-index: -101
