--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@ body {
   background-position: left center;
   background-size: 115% 115%;
   transition: 5000ms;
+  /* background-origin: var(event.x); */
   /* overflow: hidden; */
 }
 
@@ -52,16 +53,14 @@ body {
   justify-content: center;
   align-items: center;
   opacity: 0;
-  transition: 500ms;
   z-index: 100;
   /* background-color: red; */
-
-  
+  transition: 500ms;
 }
 
 .icons:hover {
   opacity: 1;
-
+  transition: 500ms;
 } 
 
 .mouse-movement{
@@ -70,26 +69,52 @@ body {
 }
 
 img {
-  
   width: 2rem;
   height: 2rem;
   margin: 1rem;
-  transition: 500ms;
   cursor: pointer;
-
+  transition: 500ms;
 }
 
 img:hover {
   width: 3.5rem;
   height: 3.5rem;
-
+  transition: 500ms;
 }
 
 .clicked {
   opacity: 0;
   /* width: 3rem;
   height: 3rem; */
+}
 
+.image-style-1  {
+  filter: invert(100%) sepia(3%) saturate(224%) hue-rotate(187deg) brightness(116%) contrast(92%);
+  transition: opacity 5000ms;
+}
+
+.image-style-2 {
+  filter: invert(95%) sepia(12%) saturate(218%) hue-rotate(200deg) brightness(93%) contrast(87%);
+  transition: opacity 5000ms;
+}
+
+.image-style-3 {
+  filter: invert(35%) sepia(36%) saturate(3327%) hue-rotate(343deg) brightness(92%) contrast(98%);
+  transition: opacity 5000ms;
+}
+
+.image-style-4 {
+  filter: invert(62%) sepia(26%) saturate(912%) hue-rotate(328deg) brightness(98%) contrast(90%);
+  transition: opacity 5000ms;
+}
+
+.image-style-5 {
+  filter: invert(88%) sepia(8%) saturate(506%) hue-rotate(94deg) brightness(91%) contrast(88%);
+  transition: opacity 5000ms;
+}
+
+.image-style-white {
+  filter: brightness(100%)
 }
 
 span {
@@ -135,6 +160,7 @@ span {
   background-color: rgba(13, 19, 11, 0.754);
   transition: 1500ms;
 }
+
 .audio {
   display: none;
   z-index: -101
