--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+* {
+  font-family: monospace;
+}
+
 body {
   margin: 0 0 0 0;
   background-image: url(1.jpg);
@@ -24,6 +28,12 @@ body {
   z-index:100;
 }
 
+.textarea {
+  position: absolute;
+  width: 0px;
+  height: 0px;
+}
+
 .textrender-element {
   padding-top: 5vh;
   margin: 10vh 10vw 5vh 10vw;
@@ -33,12 +43,17 @@ body {
   overflow: auto;
 }
 
-
 .inputarea {
   cursor:default;
   text-align: center;
   opacity: 0;
   z-index: 100;
+}
+
+button {
+  border: none;
+  background-color: transparent;
+  position:relative;
 }
 
 .icons  {
@@ -54,6 +69,10 @@ body {
   transition: 1000ms;
 }
 
+icons-container {
+  position: relative;
+}
+
 .mouse-movement{
   opacity: 1;
   filter: drop-shadow(1px 1px 5px rgba(0, 0, 0, 0.426));
@@ -64,44 +83,48 @@ img {
   height: 2rem;
   margin: 1rem;
   cursor: pointer;
+  transition: 500ms
 }
 
 img:hover {
   width: 3.5rem;
   height: 3.5rem;
   transition: 500ms;
+}
 
+button-hover {
+  width: 3.5rem;
+  height: 3.5rem;
+  transition: 500ms;
 }
 
 .clicked {
   opacity: 0;
   transition: 10ms;
+}
 
+.icon-divs {
+  position: relative;
 }
 
 .image-style-1  {
   filter: invert(100%) sepia(3%) saturate(224%) hue-rotate(187deg) brightness(116%) contrast(92%);
-
 }
 
 .image-style-2 {
   filter: invert(95%) sepia(12%) saturate(218%) hue-rotate(200deg) brightness(93%) contrast(87%);
-
 }
 
 .image-style-3 {
   filter: invert(35%) sepia(36%) saturate(3327%) hue-rotate(343deg) brightness(92%) contrast(98%);
-
 }
 
 .image-style-4 {
   filter: invert(62%) sepia(26%) saturate(912%) hue-rotate(328deg) brightness(98%) contrast(90%);
-
 }
 
 .image-style-5 {
   filter: invert(88%) sepia(8%) saturate(506%) hue-rotate(94deg) brightness(91%) contrast(88%);
-
 }
 
 .image-style-white {
@@ -112,6 +135,48 @@ span {
   text-decoration: line-through;
 }
 
+/* Tooltip */
+
+button {
+  position: relative;
+  cursor: pointer;
+}
+
+.button-style-1:after,
+.button-style-2:after,
+.button-style-3:after,
+.button-style-4:after,
+.button-style-5:after {
+  content: attr(data-tooltip);
+  position: absolute;
+  left: 50%;
+  opacity: 0;
+  filter: drop-shadow(1px 1px 5px rgba(0, 0, 0, 0.426));
+  bottom: 2px;
+  font-size: 1rem;
+  width: 9rem;
+  margin-left: -4.9rem;
+  padding: 0.4rem 0.2rem;
+  border-radius: 0.5rem;
+  transform: translateY(50%);
+  pointer-events: all;
+  transition: 500ms;
+}
+
+.button-style-1:hover::after,
+.button-style-2:hover::after,
+.button-style-3:hover::after,
+.button-style-4:hover::after,
+.button-style-5:hover::after {
+  opacity: 1;
+}
+
+/* Tooltip */
+
+.button-style-1:after {
+  color: rgb(240, 245, 245);
+}
+
 .text-span-1 {
   text-decoration: none;
   background-color: rgba(240, 245, 245, 0.333);
@@ -119,19 +184,33 @@ span {
   transition: 1500ms;
 }
 
+.button-style-2:after {
+  color: rgb(217, 216, 223);
+}
+
 .text-span-2 {
   text-decoration: none;
-  background-color: rgba(217, 216, 223, 0.5);
+  background-color: rgba(217, 216, 223, 0.3);
   mix-blend-mode: color-burn;
-  color: rgb(41, 21, 13);
+  color: rgb(57, 20, 5);
   transition: 1500ms;
+
+}
+
+.button-style-3:after {
+  color: rgb(232 66 40);
 }
 
 .text-span-3 {
   text-decoration: none;
   color: rgb(232 66 40);
-  background-color: rgba(29, 28, 22, 0.726);
+  background-color: rgba(29, 28, 22, 0);
   transition: 1500ms;
+
+}
+
+.button-style-4:after {
+  color: rgb(238, 139, 106);
 }
 
 .text-span-4 {
@@ -139,6 +218,10 @@ span {
   color: rgb(238, 139, 106);
   background-color: rgba(16, 7, 7, 0.627);
   transition: 1500ms;
+}
+
+.button-style-5:after {
+  color: rgb(177, 206, 190);
 }
 
 .text-span-5 {
@@ -150,10 +233,11 @@ span {
 
 .audio {
   display: none;
-  z-index: -101;
+  z-index: -101
 }
 
 .inactive-image {
   display: none;
   z-index: -100;
 }
+
